2007-07-09  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (closedir): Revert change from 2007-06-29.
	* fhandler.h (dirent_valid_fd): Drop.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): If opening a
	real dir, use the underlying fhandler to keep track of the directory
	handle.  In fdopendir case use original io_handle from fhandler.  Use
	fhandler's io_handle in subsequent directory functions throughout.
	Create handle non-inheritable and set close-on-exec flag.
	(readdir_get_ino): Drop dirent_isroot case.
	(fhandler_disk_file::readdir): Handle dirent_isroot case here.
	(fhandler_disk_file::rewinddir): Revert change from 2007-07-05.  Use
	NtClose instead of CloseHandle.
	* fhandler_virtual.cc (fhandler_virtual::opendir): Drop adding
	dirent_valid_fd flag.  Set close-on-exec flag.

2007-07-08  Christopher Faylor  <me+cygwin@cgf.cx>

	* Makefile.in (DLL_OFILES): Add newly-imported random.o.  Eliminate
	reliance on libiberty.
	* random.cc: Import from FreeBSD.  Modify for Cygwin environment.
	* include/cygwin/stdlib.h (random): Reflect change in return value to
	be more linux/freebsd-like.
	(srandom): Ditto.

2007-07-07  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (fhandler_base::write): Remove __stdcall decoration.
	(fhandler_pipe::write): Ditto.
	(fhandler_fifo::write): Ditto.

2007-07-07  Christopher Faylor  <me+cygwin@cgf.cx>

	Preliminary change to make pipes interruptible and fifos reliable.
	* dtable.cc (dtable::find_fifo): Eliminate definition.
	* dtable.h (dtable::find_fifo): Ditto for declaration.
	* fhandler.cc (fhandler_base::raw_read): Remove pipe-specific stuff.
	(fhandler_base::fhandler_base): Ditto.
	(fhandler_base::close): Handle overlapped I/O structure if appropriate.
	(fhandler_base::dup): Ditto.
	(fhandler_base::fork_fixup): Ditto.
	(fhandler_base::setup_overlapped): Define new function.
	(fhandler_base::destroy_overlapped): Ditto.
	(fhandler_base::wait_overlapped): Ditto.
	(fhandler_base::read_overlapped): Ditto.