@@ -317,12 +317,13 @@ details. */
       174: Export stpcpy, stpncpy.
       175: Export fdopendir.
       176: Export wcstol, wcstoll, wcstoul, wcstoull, wcsxfrm.
+      177: Export sys_sigabbrev
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 176
+#define CYGWIN_VERSION_API_MINOR 177
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
